k8s/notification-namespace/notification-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notification-service-ingress
  namespace: notification
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  rules:
  - host: api.gindho.com
    http:
      paths:
      - path: /notification
        pathType: Prefix
        backend:
          service:
            name: notification-service
            port:
              number: 9027
